root-app/templates/media/jellyfin-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-jellyfin
  namespace: jellyfin
spec:
  ingressClassName: nginx
  rules:
  - host: jellyfin.hp-elitedesk-800g2
    http:
      paths:
      - path: /
        backend:
          serviceName: jellyfin
          servicePort: 8096
