root-app/templates/media/radarr-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /     # fix error 404 http://hp-elitedesk-800g2/index-1726e9622bdfaf0ebb89.js
  labels:
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: radarr
    app.kubernetes.io/version: 5.27.0.10101
    argocd.argoproj.io/instance: radarr
    helm.sh/chart: radarr-1.23.0
  name: radarr
  namespace: media
spec:
  rules:
    - http:
        paths:
          - path: /radarr
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
  # - host: radarr.hp-elitedesk-800g2
  #   http:
  #     paths:
  #     - backend:
  #         service:
  #           name: radarr
  #           port:
  #             number: 7878
  #       path: /
  #       pathType: Prefix
status:
  loadBalancer: {}
